--- a/frontend/playground/showcase_orca/public/style.css
+++ b/frontend/playground/showcase_orca/public/style.css
@@ -6,7 +6,15 @@ html, body{
 }
 
 play-frame{
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+
+play-lobby{
+    position: absolute;
     display: flex;
     width: 100%;
     height: 100%;
+
 }
