--- a/braket/3d/board/public/style.css
+++ b/braket/3d/board/public/style.css
@@ -1,7 +1,8 @@
-html,
-body{
-    margin: 0;
+body, 
+html{
     padding: 0;
+    margin: 0;
     width: 100%;
     height: 100%;
+    background-color: orangered;
 }
